// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders blog path correctly 1`] = `
<header>
  <h1
    style={
      Object {
        "fontSize": "2.05811rem",
        "lineHeight": "2.415rem",
      }
    }
  >
    <a
      href="/blog/"
      style={
        Object {
          "color": "inherit",
          "textDecorationLine": "none",
        }
      }
    >
      Name of Blog
    </a>
  </h1>
</header>
`;

exports[`Header renders non-blog path correctly 1`] = `
<header>
  <h3
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <a
      href="/blog/"
      style={
        Object {
          "color": "inherit",
          "textDecorationLine": "none",
        }
      }
    >
      Some Page
    </a>
  </h3>
</header>
`;

exports[`Header renders root path correctly 1`] = `
<header>
  <h1
    style={
      Object {
        "fontSize": "2.05811rem",
        "lineHeight": "2.415rem",
      }
    }
  >
    <a
      href="/"
      style={
        Object {
          "color": "inherit",
          "textDecorationLine": "none",
        }
      }
    >
      Name of Blog
    </a>
  </h1>
</header>
`;
